# documents-rag

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.githooks/: pre-commit
.github/: pull_request_template.md
alembic/: README.md  env.py
alembic/versions/: 07f849bf2b95_add_index_collections_and_document_indexing_metadata.py  1c2d9f3a7b4e_add_vector_cleanup_jobs_table.py  4a4f5c0674f4_add_document_content_hash_column.py  a1a302e871c3_current_schema_baseline.py  a3f9c7d2e1b5_add_document_storage_identity_columns.py  a8685da857f3_add_reindex_jobs_table.py  acf1b01d5a02_add_documents_and_ingestion_jobs_tables.py  b7e2f6a1c9d4_add_ingestion_job_active_unique_index.py  c8f3a2b6d1e7_add_document_deletion_jobs_table.py  fb63f21089ca_add_reindex_job_source_and_activation_columns.py
analysis/: phase-2.8-completion-and-backend-freeze-audit.md
app/: main.py
app/api/: __init__.py
app/api/routes/: __init__.py  health.py
app/api/v1/: __init__.py
app/core/: __init__.py  config.py  correlation.py  cors.py  errors.py  exception_handlers.py  lifespan.py  logging_config.py  middleware.py  retry.py  version.py
app/db/: __init__.py  session.py
app/models/: __init__.py  document.py  document_deletion_job.py  index_collection.py  ingestion_job.py  reindex_job.py  vector_cleanup_job.py
app/rag/: __init__.py  decision.py  embedding_config.py  embedding_validation.py  engine.py  language.py  orchestrator.py  prompt_builder.py  responses.py  retrieval_service.py
app/rag/engines/: __init__.py  custom_engine.py  engine_factory.py  langchain_adapters.py  langchain_engine.py
app/rag/prompts/: __init__.py  catalog.py  provider.py  types.py
app/rag/providers/: __init__.py  anthropic_provider.py  embedding_provider.py  errors.py  gemini_provider.py  http_retry_policy.py  llm_provider.py  llm_provider_stub.py  ollama_embedding_provider.py  ollama_llm_provider.py  openai_provider.py  provider_factory.py  qdrant_vector_store.py  vector_store.py
app/schemas/: chat.py  documents.py  health.py  providers.py  reconciliation.py  reindex.py
app/services/: __init__.py  document_chunker.py  document_deletion_service.py  document_query_service.py  document_text_extractor.py  document_upload_service.py  index_registry.py  ingestion_retry_service.py  ingestion_worker.py  local_file_storage.py  ollama_client.py  platform_health.py  reindex_service.py
app/services/documents/: __init__.py  chunker.py  dedup_service.py  deletion_service.py  deletion_worker.py  download_service.py  query_service.py  text_extractor.py  upload_service.py
app/services/indexing/: __init__.py  cleanup_job_service.py  collection_registry.py  reindex_service.py  (+5 more)
app/storage/: __init__.py  contract.py  errors.py  factory.py  keys.py  local_storage.py  minio_storage.py
app/workers/: __init__.py
docs/architecture/: README.md
docs/backend-e2e/: README.md
docs/configuration/: README.md
docs/deployment/: README.md
docs/development/: README.md
docs/document-lifecycle/: README.md
docs/langchain/: README.md
docs/multilingual/: README.md
docs/operations/: README.md
docs/providers/: README.md
docs/rag/: README.md
docs/storage/: README.md
docs/testing/: README.md
docs/troubleshooting/: README.md
scripts/: _shutdown.py  install-git-hooks.sh  process_pending_document_deletions.py  process_pending_reindex_jobs.py  process_pending_vector_cleanups.py  recover_stale_ingestion_jobs.py  smoke_multilingual_real.py
tests/: multilingual_fixtures.py  test_chat_endpoint.py  test_config.py  test_custom_rag_engine.py  test_document_chunker.py  test_document_deletion_routes.py  test_document_deletion_service.py  test_document_download_local_storage.py  test_document_query_service.py  test_document_read_routes.py  test_document_text_extractor.py  test_document_upload.py  test_embedding_config.py  test_embedding_validation.py  test_env_example_consistency.py  test_file_storage_health.py  test_health.py  test_index_registry.py  test_ingestion_retry_routes.py  test_ingestion_retry_service.py  test_ingestion_worker.py  test_langchain_adapters.py  test_langchain_rag_engine.py  test_language_detector.py  test_minio_file_storage.py  test_ollama_embedding_provider.py  test_ollama_health.py  test_ollama_llm_provider.py  test_platform_health.py  test_platform_health_service.py  test_prompt_catalog.py  test_prompt_provider_engine_parity.py  test_provider_factory.py  test_qdrant_vector_store.py  test_rag_decision.py  test_rag_orchestrator.py  test_rag_prompt_builder.py  test_rag_responses.py  test_reindex_service.py  test_retrieval_service.py  (+1 more)
tests/e2e/: __init__.py
tests/integration/: __init__.py  conftest.py  test_alembic_migrations.py  test_document_deletion_postgres.py  test_document_deletion_qdrant.py  test_document_deletion_storage.py  test_document_download_minio.py  test_document_read_api.py  test_ingestion_retry_postgres.py  test_ingestion_worker_minio.py  test_ingestion_worker_postgres.py  test_langchain_rag_engine_integration.py  test_minio_storage.py  test_multilingual_indexing.py  test_platform_health_readiness.py  test_qdrant_vector_store_integration.py
tests/support/: __init__.py  fake_document_deletion_session.py  fake_document_session.py  fake_ingestion_retry_session.py  minio_containers.py
tests/unit/: conftest.py
(+144 files in other folders)
