[project]
name = "documents-rag"
version = "0.1.0"
description = "Local RAG platform infrastructure scaffold"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "redis>=5.0",
    "qdrant-client>=1.9",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "pypdf>=4.0",
    "python-docx>=1.1",
    "openpyxl>=3.1",
    "langchain-core>=0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.11",
    "testcontainers[postgres]>=4.7",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: fast tests using fakes/mocks only, no real external services (default when unmarked)",
    "integration: tests against real ephemeral services started via Testcontainers",
    "e2e: end-to-end tests spanning the full stack (future milestone)",
    "slow: tests that take noticeably longer than the rest of the suite",
]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.mypy]
# 3.12, one above requires-python's floor: numpy's stub (pulled in transitively via
# qdrant-client) uses a PEP 695 `type` alias mypy only parses under python_version >= 3.12,
# even inside .pyi files. Does not change the app's actual runtime-supported Python version.
python_version = "3.12"
ignore_missing_imports = true
disallow_untyped_defs = false
