[project]
name = "documents-rag"
version = "0.1.0"
description = "Local RAG platform infrastructure scaffold"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "redis>=5.0",
    "qdrant-client>=1.9",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "pypdf>=4.0",
    "python-docx>=1.1",
    "openpyxl>=3.1",
    # MinIO/S3-compatible object storage client (Phase 2.6/2.7's MinioFileStorage) — see
    # app/storage/minio_storage.py's module docstring for why the SDK is used directly instead
    # of raw httpx, unlike this project's Ollama/Qdrant providers.
    "minio>=7.2",
    "langchain-core>=0.3",
    # Pinned below 2.5: not used directly by this app (pulled in transitively — a runtime
    # dependency of qdrant-client, and type-checking-only via langchain-core's
    # `langchain_core.utils.image`). numpy>=2.5's bundled .pyi stub uses a PEP 695 `type` alias
    # that mypy only parses under python_version >= 3.12 — this project targets/ships on Python
    # 3.11 (see Dockerfile, requires-python above), so python_version stays 3.11 and this pin
    # keeps numpy's own stub parseable instead. Safe to lift once either mypy parses that stub
    # syntax independent of target version, or this project's Python floor moves to 3.12+.
    "numpy<2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.11",
    "testcontainers[postgres]>=4.7",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: fast tests using fakes/mocks only, no real external services (default when unmarked)",
    "integration: tests against real ephemeral services started via Testcontainers",
    "e2e: end-to-end tests spanning the full stack (future milestone)",
    "slow: tests that take noticeably longer than the rest of the suite",
]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["minio.*", "urllib3.*"]
ignore_missing_imports = true
